--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 </style>
 </head>
 <body>
-<audio autoplay="autopaly">
+<!--<audio autoplay="autopaly">
   <source src="renxi.mp3" type="audio/mp3" />
 </audio>
 <div id="main">
-  <!--<div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a href="http://firefox.com.cn/download/">Firefox</a>)浏览器，或者其他游览器的最新版本。</div>-->
+  &lt;!&ndash;<div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a href="http://firefox.com.cn/download/">Firefox</a>)浏览器，或者其他游览器的最新版本。</div>&ndash;&gt;
   <div id="wrap">
     <div id="text">
       <div id="code"> <font color="#FF0000"> <span class="say">亲爱的宝宝，我爱你，虽然你看不见我对你的告白</span><br>
@@ -38,7 +38,7 @@
         <span class="say">因为我太啰嗦了，所以你离开了我</span><br>
         <span class="say">虽然你看不见我的告白，但是我还是要把这些心里话说出来</span><br>
         <span class="say"> </span><br>
-        <span class="say"><span class="space"></span> -- 爱你的我--</span> </font>
+        <span class="say"><span class="space"></span> &#45;&#45; 爱你的我&#45;&#45;</span> </font>
         </p>
       </div>
     </div>
@@ -204,6 +204,7 @@
 
         runAsync().start();
     })();
-    </script>
+    </script>-->
+hello  world
 </body>
 </html>
