--- a/index.html
+++ b/index.html
@@ -29,24 +29,27 @@
   <!--<div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a href="http://firefox.com.cn/download/">Firefox</a>)浏览器，或者其他游览器的最新版本。</div>-->
   <div id="wrap">
     <div id="text">
-      <div id="code"> <font color="#FF0000"> <span class="say">亲爱的宝宝，我爱你，虽然你看不见我对你的告白</span><br>
+      <div id="code"> <font color="#FF0000"> <span class="say">春水初生</span><br>
         <span class="say"> </span><br>
-        <span class="say"> 我知道我不会甜言蜜语，但是我会用行动证明一切</span><br>
+        <span class="say">春林渐盛 </span><br>
         <span class="say"> </span><br>
-        <span class="say">你说我啰嗦，有些东西因为越在乎所以越失去</span><br>
-        <span class="say">因为我太爱你了，所以我更害怕失去你</span><br>
-        <span class="say">因为我太啰嗦了，所以你离开了我</span><br>
-        <span class="say">虽然你看不见我的告白，但是我还是要把这些心里话说出来</span><br>
-        <span class="say"> </span><br>
-        <span class="say"><span class="space"></span> -- 爱你的我--</span> </font>
+        <span class="say">春风十里</span><br>
+        <span class="say"></span><br>
+        <span class="say">不如你</span><br>
+        <span class="say"></span><br>
+        <span class="say">愿你天天开心  </span><br>
+        <span class="say"><span class="space"></span> --至 群 --</span> </font>
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的宝宝，我喜欢你</font> <span class="STYLE1">已经是……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">去年十一</font> <span class="STYLE1">已是……</span>
       <div id="clock"></div>
+	  
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
+	
   </div>
+  
 </div>
 
 <script>
@@ -177,7 +180,7 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2009,11 , 27); 			//时间年月日
+		    together.setFullYear(2015,10 , 01); 			//时间年月日
 		    together.setHours(16);						//小时	
 		    together.setMinutes(53);					//分钟
 		    together.setSeconds(0);					//秒前一位
