--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>look here</title>
+<link type="image/x-icon" rel="shortcut icon" href="./images/favicon.ico" />
+
 <link type="text/css" rel="stylesheet" href="./renxi/default.css">
 <script type="text/javascript" src="./renxi/jquery.min.js"></script>
 <script type="text/javascript" src="./renxi/jscex.min.js"></script>
@@ -16,7 +18,7 @@
 <style type="text/css">
 
 .STYLE1 {
-	color: #666666
+	color: #73a4ec
 }
 
 </style>
