--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ var _hmt = _hmt || [];
         <span class="say">不如你</span><br>
         <span class="say"></span><br>
         <span class="say">愿你天天开心  </span><br>
-        <span class="say"><span class="space"></span> --至 群 --</span> </font>
+        <span class="say"><span class="space"></span> -- 群 --</span> </font>
         </p>
       </div>
     </div>
