--- a/index.html
+++ b/index.html
@@ -42,20 +42,28 @@ var _hmt = _hmt || [];
   <!--<div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a href="http://firefox.com.cn/download/">Firefox</a>)浏览器，或者其他游览器的最新版本。</div>-->
   <div id="wrap">
     <div id="text">
-      <div id="code"> <font color="#FF0000"> <span class="say">春水初生</span><br>
+      <div id="code"> <font color="#FF0000"> <span class="say">祝</span><br>
         <span class="say"> </span><br>
-        <span class="say">春林渐盛 </span><br>
+        <span class="say">你 </span><br>
         <span class="say"> </span><br>
-        <span class="say">春风十里</span><br>
+        <span class="say">岁</span><br>
         <span class="say"></span><br>
-        <span class="say">不如你</span><br>
+        <span class="say">月</span><br>
         <span class="say"></span><br>
-        <span class="say">愿你天天开心  </span><br>
+        <span class="say">波  </span><br>
+		 <span class="say"></span><br>
+        <span class="say">澜  </span><br>
+		 <span class="say"></span><br>
+        <span class="say">有  </span><br>
+		 <span class="say"></span><br>
+        <span class="say">人  </span><br>
+		 <span class="say"></span><br>
+        <span class="say">陪  </span><br>
         <span class="say"><span class="space"></span> -- 群 --</span> </font>
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">去年十一</font> <span class="STYLE1">已是……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">二零一五年十月一日</font> <span class="STYLE1">……</span>
       <div id="clock"></div>
 	  
     </div>
