--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ var _hmt = _hmt || [];
         <span class="say">人  </span><br>
 		 <span class="say"></span><br>
         <span class="say">陪  </span><br>
-        <span class="say"><span class="space"></span> -- 徐群 --</span> </font>
+        <span class="say"><span class="space"></span> -- 群 --</span> </font>
         </p>
       </div>
     </div>
