--- a/index.html
+++ b/index.html
@@ -42,28 +42,28 @@ var _hmt = _hmt || [];
   <!--<div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a href="http://firefox.com.cn/download/">Firefox</a>)浏览器，或者其他游览器的最新版本。</div>-->
   <div id="wrap">
     <div id="text">
-      <div id="code"> <font color="#FF0000"> <span class="say">祝</span><br>
+      <div id="code"> <font color="#FF0000"> <span class="say"> </span><br>
         <span class="say"> </span><br>
-        <span class="say">你 </span><br>
+        <span class="say">情 </span><br>
         <span class="say"> </span><br>
-        <span class="say">岁</span><br>
+        <span class="say">人</span><br>
         <span class="say"></span><br>
-        <span class="say">月</span><br>
+        <span class="say">节</span><br>
         <span class="say"></span><br>
-        <span class="say">波  </span><br>
+        <span class="say">快  </span><br>
 		 <span class="say"></span><br>
-        <span class="say">澜  </span><br>
+        <span class="say">乐  </span><br>
 		 <span class="say"></span><br>
-        <span class="say">有  </span><br>
+        <span class="say">  </span><br>
 		 <span class="say"></span><br>
-        <span class="say">人  </span><br>
+        <span class="say">  </span><br>
 		 <span class="say"></span><br>
-        <span class="say">陪  </span><br>
-        <span class="say"><span class="space"></span> -- 群 --</span> </font>
+        <span class="say">  </span><br>
+        <span class="say"><span class="space"></span> -- 媛媛 --</span> </font>
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">二零一五年十月一日</font> <span class="STYLE1">……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">二零一六年十月一日</font> <span class="STYLE1">……</span>
       <div id="clock"></div>
 	  
     </div>
@@ -201,7 +201,7 @@ var _hmt = _hmt || [];
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2015,10 , 01); 			//时间年月日
+		    together.setFullYear(2016,10 , 01); 			//时间年月日
 		    together.setHours(16);						//小时	
 		    together.setMinutes(53);					//分钟
 		    together.setSeconds(0);					//秒前一位
