--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>情人节快乐！</title>
+<title>i   love   you</title>
 <link type="image/x-icon" rel="shortcut icon" href="./images/favicon.ico" />
 
 <link type="text/css" rel="stylesheet" href="./renxi/default.css">
@@ -47,11 +47,11 @@ var _hmt = _hmt || [];
     <div id="text">
       <div id="code"> <font color="#FF0000"> <span class="say"> </span><br>
         <span class="say"> </span><br>
-        <span class="say">情     人      节      快      乐 </span><br>
+        <span class="say">情               人             节                快                乐 </span><br>
         <span class="say"> </span><br>
         <span class="say"></span><br>
         <span class="say"></span><br>
-        <span class="say">晚     上      约       吗？</span><br>
+        <span class="say">晚              上              约              吗？</span><br>
         <span class="say"></span><br>
         <span class="say"></span><br>
 		 <span class="say"></span><br>
