--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@ var _hmt = _hmt || [];
     <div id="text">
       <div id="code"> <font color="#FF0000"> <span class="say"> </span><br>
         <span class="say"> </span><br>
-        <span class="say">情               人             节                快                乐 </span><br>
-        <span class="say"> </span><br>
+        <span class="say">媛 </span><br>
+        <span class="say">， </span><br>
+        <span class="say">晚</span><br>
         <span class="say"></span><br>
+        <span class="say">上</span><br>
         <span class="say"></span><br>
-        <span class="say">晚              上              约              吗？</span><br>
-        <span class="say"></span><br>
-        <span class="say"></span><br>
+        <span class="say">约</span><br>
+		 <span class="say"></span><br>
+        <span class="say">否 </span><br>
+		 <span class="say"></span><br>
+        <span class="say"> ？ </span><br>
 		 <span class="say"></span><br>
         <span class="say">  </span><br>
 		 <span class="say"></span><br>
         <span class="say">  </span><br>
-		 <span class="say"></span><br>
-        <span class="say">  </span><br>
-		 <span class="say"></span><br>
-        <span class="say">  </span><br>
-        <span class="say"><span class="space"></span> -- 媛媛 --</span> </font>
+        <span class="say"><span class="space"></span> </span> </font>
         </p>
       </div>
     </div>
