媛媛生日用

--- a/index.html
+++ b/index.html
@@ -45,26 +45,56 @@ var _hmt = _hmt || [];
   <!--<div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a href="http://firefox.com.cn/download/">Firefox</a>)浏览器，或者其他游览器的最新版本。</div>-->
   <div id="wrap">
     <div id="text">
-      <div id="code"> <font color="#FF0000"> <span class="say"> </span><br>
-        <span class="say"> </span><br>
-        <span class="say">媛 </span><br>
-		<span class="say"> </span><br>
-        <span class="say">， </span><br>
-		<span class="say"> </span><br>
-        <span class="say">情</span><br>
+      <div id="code"> <font color="#FF0000">
+	  
+	  <span class="say"> </span><br>
+           
+        <span class="say">亲&nbsp;&nbsp;爱&nbsp;&nbsp;的,</span><br>
+		<span class="say"></span><br>
+		<span class="say">如&nbsp;&nbsp;果&nbsp;&nbsp;额&nbsp;&nbsp;头&nbsp;&nbsp;终&nbsp;&nbsp;将&nbsp;&nbsp;刻&nbsp;&nbsp;上&nbsp;&nbsp;皱&nbsp;&nbsp;纹,</span><br>
+		<span class="say"></span><br>
+		<span class="say">我&nbsp;&nbsp;希&nbsp;&nbsp;望&nbsp;&nbsp;它&nbsp;&nbsp;永&nbsp;&nbsp;远&nbsp;&nbsp;不&nbsp;&nbsp;要&nbsp;&nbsp;刻&nbsp;&nbsp;到&nbsp;&nbsp;你&nbsp;&nbsp;的&nbsp;&nbsp;心&nbsp;&nbsp;上.</span><br>
+        <!--<span class="say"></span><br>
+        <span class="say">爱 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  果    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;          希</span><br>
         <span class="say"></span><br>
-        <span class="say">人</span><br>
+        <span class="say">的 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  额    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;          望</span><br>
+		 <span class="say"></span><br>
+        <span class="say">,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;头     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;         它</span><br>
+		 <span class="say"></span><br>
+        <span class="say"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;终    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;         永</span><br>
+		 <span class="say"></span><br>
+        <span class="say">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 将    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;         远</span><br>
+		 <span class="say"></span><br>
+        <span class="say"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;刻     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;        不</span><br>
+		<span class="say"> </span><br>
+		<span class="say">&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;上     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;         要</span><br>
+		<span class="say"> </span><br>
+		<span class="say">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;皱       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;        刻</span><br>
+		<span class="say"> </span><br>
+		<span class="say">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;纹       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;         到</span><br>
+		<span class="say"> </span><br>
+		<span class="say">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;          你</span><br>
+		<span class="say"> </span><br>
+		<span class="say">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;          的</span><br>
+		<span class="say"> </span><br>
+		<span class="say">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;        &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;         心</span><br>
+		<span class="say"> </span><br>
+		<span class="say">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;         上</span><br>
+
+        <span class="say"><span class="space"></span> </span> -->
+		
+
+
+
+ <!--
+		<span class="say"> </span><br>
+           
+        <span class="say">亲爱的,</span><br>
         <span class="say"></span><br>
-        <span class="say">节</span><br>
-		 <span class="say"></span><br>
-        <span class="say">快</span><br>
-		 <span class="say"></span><br>
-        <span class="say"> 乐 </span><br>
-		 <span class="say"></span><br>
-        <span class="say"> . </span><br>
-		 <span class="say">.</span><br>
-        <span class="say"> . </span><br>
-        <span class="say"><span class="space"></span> </span> </font>
+		<span class="say">如果额头终将刻上皱纹，</span><br>
+		<span class="say"></span><br>
+		<span class="say">我希望它永远不要刻到你的心上.</span><br>-->
+		</font>
         </p>
       </div>
     </div>
